Initial Android Commit
Added some Mqtt stuff

Added some view stuff

View Working

Adding subscription functional

Added dropdown

added more functionality visa-vie clients

--- a/Android/app/src/main/res/layout/fragment_manage_clients.xml
+++ b/Android/app/src/main/res/layout/fragment_manage_clients.xml
@@ -4,34 +4,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ManageClientsFragment"
+    tools:context=".view.ManageClientsFragment"
     android:background="#3F51B5">
 
     <Button
-        android:id="@+id/addSubTest"
+        android:id="@+id/addClientOpenFragmentButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:text="@string/add_client" />
 
-        android:text="Add Subscription" />
 
-    <Button
-        android:id="@+id/closeManageClientsFragment"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_weight="1"
-        android:text="Close"
-        android:visibility="gone"/>
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/clientsRecyclerView"-->
+<!--    <Button-->
+<!--        android:id="@+id/closeManageClientsFragment"-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_weight="1" />-->
+<!--        android:layout_height="150dp"-->
+<!--        android:text="Close"/>-->
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/clientDropDownSpinner"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:visibility="gone"
+        android:layout_height="20dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+        android:id="@+id/clientsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="600dp" />
+
+    <Button
+        android:id="@+id/addSubscriptionOpenFragmentButton"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        android:text="@string/add_subscription" />
+
 
 
 </LinearLayout>
