--- a/Android/app/src/main/res/layout/fragment_add_client.xml
+++ b/Android/app/src/main/res/layout/fragment_add_client.xml
@@ -7,7 +7,7 @@
 
     <EditText
         android:id="@+id/clientIdEntryEt"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:ems="10"
         android:inputType="text"
@@ -15,19 +15,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/submitClientButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/clientIdEntryEt"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/clientUrlEt"
-        android:layout_width="wrap_content"
+        android:id="@+id/newSubTopicEt"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textUri"
