--- a/Android/app/src/main/res/layout/mqtt_client_item.xml
+++ b/Android/app/src/main/res/layout/mqtt_client_item.xml
@@ -6,9 +6,9 @@
     android:background="#4CAF50">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
         android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
@@ -41,9 +41,9 @@
 
     <Button
         android:id="@+id/deleteClientButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
         android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:text="Delete" />
 
 
