--- a/Android/app/src/main/res/layout/fragment_manage_clients.xml
+++ b/Android/app/src/main/res/layout/fragment_manage_clients.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.ManageClientsFragment"
+    tools:context=".view.fragment.ManageClientsFragment"
     android:background="#3F51B5">
 
     <Button
@@ -18,9 +18,6 @@
         android:id="@+id/clientsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="600dp" />
-
-
-
 
 
 </LinearLayout>
