--- a/Android/app/src/main/res/layout/mqtt_client_item.xml
+++ b/Android/app/src/main/res/layout/mqtt_client_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     android:orientation="horizontal"
     android:background="#4CAF50">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:weightSum="4"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/clientIdTv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:text="TextView"
             android:textColor="@color/white"
@@ -23,7 +24,7 @@
         <TextView
             android:id="@+id/clientUrlTv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:text="TextView"
             android:textColor="@color/white"
@@ -32,11 +33,22 @@
         <TextView
             android:id="@+id/clientSubsTv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/clientPublisherTv"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone"
+            android:textColor="@color/white"
+            android:text="TextView" />
+
+
     </LinearLayout>
 
     <Button
@@ -45,6 +57,8 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="Delete" />
+
+
 
 
 </LinearLayout>
