can send messaged

--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,15 @@
         android:text="@string/subscriptions"
         app:layout_constraintStart_toEndOf="@+id/clientFragmentButton"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+
+        android:id="@+id/messageFragmentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Send Message"
+        app:layout_constraintStart_toEndOf="@+id/subsFragmentButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/contentArea"
@@ -31,5 +40,7 @@
         android:background="#FFEB3B"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clientFragmentButton"></LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/clientFragmentButton"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
