--- a/Android/app/src/main/res/layout/fragment_gyroscope_visualiser.xml
+++ b/Android/app/src/main/res/layout/fragment_gyroscope_visualiser.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:background="#E9353535"
     tools:context=".view.activity.datavisualiser.fragments.GyroscopeVisualiserFragment" >
 
