--- a/Android/app/src/main/res/layout/fragment_manage_clients.xml
+++ b/Android/app/src/main/res/layout/fragment_manage_clients.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.fragment.ManageClientsFragment"
+    tools:context=".view.activity.clientsandsubs.fragments.ManageClientsFragment"
     android:background="#3F51B5">
 
     <Button
