--- a/Android/app/src/main/res/layout/fragment_manage_subscriptions.xml
+++ b/Android/app/src/main/res/layout/fragment_manage_subscriptions.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#3F51B5"
-    tools:context=".view.fragment.ManageSubscriptionsFragment">
+    tools:context=".view.activity.clientsandsubs.fragments.ManageSubscriptionsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <Spinner
@@ -26,15 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clientDropDownSpinner" />
 
-    <Button
-        android:id="@+id/addTopicOpenFragmentButton"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Add Sensor to Topic "
-        android:visibility="gone"
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addSubscriptionOpenFragmentButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
