--- a/Android/app/src/main/res/layout/activity_sensors.xml
+++ b/Android/app/src/main/res/layout/activity_sensors.xml
@@ -25,9 +25,29 @@
         android:layout_marginTop="50dp"
         android:textSize="30dp"
         app:switchMinWidth="70dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addSensorTopicButt" />
+
+    <Spinner
+        android:id="@+id/pollSpeedSpinner"
+        android:layout_width="409dp"
+        android:layout_height="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_height="wrap_content"
+        android:text="Sensor Poll Speed"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sensorSwitch" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
